--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -1,3 +1,55 @@
+.progress-bar-dashboard{
+    width: 74px;
+    height: 70px;
+    position: relative;
+}
+
+.btn-filter-dashboard{
+    border: none;
+}
+
+.btn-filter-dashboard:focus{
+    outline: none;
+}
+
+.count-text-grey{
+    font-family: 'inter_bold', sans-serif !important;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 130%;
+    letter-spacing: -0.02em;
+    color: #888888;
+}
+
+.black{
+    color:#050401;
+}
+
+.text-name{
+    font-family: 'inter_bold', sans-serif !important;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 130%;
+    display: flex;
+    align-items: center;
+    color: #050401;
+}
+
+.text-nilai{
+    font-family: 'inter_bold', sans-serif !important;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 130%;
+    display: flex;
+    align-items: center;
+    text-align: right;
+    color: #050401;
+    margin-top: 6px;
+}
+
 .title-popover{
     font-family: 'inter_bold', sans-serif !important;
     font-style: normal;
