--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -4401,3 +4401,7 @@ and (max-device-width: 1024px)  {
     margin-bottom: 1.7rem;
     border-top: 1px solid #BDBDBD;
 }
+
+.optionalSelect{
+    display: none;
+}
