--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -1,3 +1,20 @@
+.text-add-bulk{
+    font-family: 'inter_bold', sans-serif !important;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 130%;
+    letter-spacing: -0.02em;
+    color: #4F4F4F;
+}
+
+.link-add-bulk{
+    font-weight: 700;
+    color:#DF0E2C;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 .btn-edit-status{
     margin-top: 30px;
 }
