--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -1,3 +1,26 @@
+.title-empty-report{
+    font-family: 'inter_bold', sans-serif !important;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 130%;
+    color: #050401;
+}
+
+.text-empty-report{
+    font-family: 'inter_bold', sans-serif !important;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 130%;
+    color: #4F4F4F;
+}
+
+.span-empty-report{
+    font-weight: 600;
+    color: #DF0E2C;
+}
+
 .table-report thead th{
     vertical-align: middle !important;
     text-align: center;
