--- a/resources/assets/css/homepage-style.css
+++ b/resources/assets/css/homepage-style.css
@@ -766,10 +766,7 @@ ul.location-list li p {
 
 .heading-container-faq {
    display: flex;
-   width: 90%;
    justify-content: space-between;
-   margin: 0 auto;
-   margin-top: 100px;
 }
 
 .heading-container-faq h1 {
@@ -793,8 +790,6 @@ ul.location-list li p {
 
 .content-container-faq {
    display: flex;
-   width: 90%;
-   margin: 47px auto;
 }
 
 .question-box {
@@ -803,6 +798,7 @@ ul.location-list li p {
    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.15);
    border-radius: 10px;
    color: rgba(51, 51, 51, 1);
+   cursor: pointer;
 }
 
 .content {
