--- a/resources/assets/css/homepage-style.css
+++ b/resources/assets/css/homepage-style.css
@@ -1088,3 +1088,206 @@ ul.location-list li p {
 .text-warning-home span {
    font-weight: bold;
 }
+
+.mobile-nav-head .navbar-btn-mobile {
+    display: none;
+}
+
+.profile-dropdown-mobile {
+    display: none;
+}
+.tabs-edit-profile-mobile {
+    display: none;
+ }
+
+ .btn-collapse {
+    background-color: transparent;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.btn-collapse:active {
+    outline: none;
+}
+.btn-collapse .img-profile {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+}
+.btn-collapse .name-profile {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 17px;
+    line-height: 17px;
+    color: #050401;
+    margin-bottom: 0px;
+    margin-left: 10px;
+ 
+    width: 210px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+/* .profile-dropdown-mobile .collapse .list-group {
+    padding-left: 25px;
+    margin-top: 10px;
+} */
+.profile-dropdown-mobile .collapse .list-group .list-group-item {
+    padding-left: 2.25rem;
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 113.2%;
+    color: #333333;
+    text-decoration: none;
+    padding: 1rem 1rem 1rem 2.25rem;
+    display: flex;
+    align-items: center;
+    border: 0 none;
+}
+.profile-dropdown-mobile .collapse .list-group .list-group-item img {
+    margin-right: 10px;
+}
+
+.tabs-edit-profile-mobile a.nav-link {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    height: 40px;
+}
+.tabs-edit-profile-mobile .nav-link p {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 113.2%;
+    color: #333333;
+}
+.tabs-edit-profile-mobile a.nav-link.active {
+    background-color: #df0e2c;
+    border-radius: 8px;
+}
+.tabs-edit-profile-mobile a.nav-link.active p {
+    color: #e8f7ee;
+}
+.tabs-edit-profile-mobile a.nav-link img {
+    margin-right: 7px;
+}
+
+@media only screen and (max-width: 575px) {
+    .modal-sign-up {
+        max-width: 100%;
+    }
+    .wrapper-mobile-nav {
+        padding: 0px 15px;
+    }
+
+    .tabs-edit-profile-mobile a.nav-link {
+        text-decoration: none;
+        display: flex;
+        align-items: center;
+        height: 55px;
+        min-width: 55px;
+        background-color: #F5F8FA;
+        border-radius: 50%;
+    }
+    .tabs-edit-profile-mobile a.nav-link p {
+        display: none;
+    }
+    .tabs-edit-profile-mobile a.nav-link.active {
+        background-color: #df0e2c;
+        border-radius: 30px;
+    }
+    .tabs-edit-profile-mobile a.nav-link.active p {
+        display: block;
+    }
+    .tabs-edit-profile-mobile a.nav-link img {
+        margin-right: 0px;
+    }
+}
+@media only screen and (max-width: 768px) {
+    .profile-dropdown {
+        display: none;
+    }
+    .profile-dropdown-mobile {
+        display: block;
+    }
+
+    .wrapper-mobile-nav {
+        height: 75px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+    }
+    .wrapper-mobile-nav .navbar-toggler {
+        border: none;
+        background: white;
+        height: 40px;
+        width: 40px;
+    }
+    .wrapper-mobile-nav .navbar-toggler svg {
+        fill: #828282;
+    }
+    .wrapper-mobile-nav .navbar-toggler svg:hover {
+        fill: #050401;
+    }
+    #navbarSupportedContent {
+        display: block;
+        position: fixed;
+        top: 0;
+        right: 0;
+        /* right: -470px; */
+        background: white;
+        width: 0;
+        z-index: 16;
+        /* padding-left: 15px; */
+        /* padding-right: 15px; */
+        height: 100vh;
+        transition: 0.5s;
+    }
+    #navbarSupportedContent .mobile-nav-head {
+        height: 75px;
+        display: flex;
+        align-items: center;
+        padding-left: 23px;
+    }
+    #navbarSupportedContent .mobile-nav-head .navbar-btn-mobile {
+        display: block;
+        height: 40px;
+        width: 40px;
+        border: none;
+        background: white;
+    }
+    #navbarSupportedContent .mobile-nav-head .navbar-btn-mobile svg {
+        fill: #828282;
+    }
+    #navbarSupportedContent .mobile-nav-head .navbar-btn-mobile svg:hover {
+        fill: #050401;
+    }
+    #navbarSupportedContent .nav-item {
+        padding-left: 26px;
+        padding-right: 26px;
+    }
+    #navbarSupportedContent .nav-item.active {
+        padding-left: 20px;
+        border-bottom: 0px;
+        border-left: 6px solid #df0e2c;
+    }
+    #navbarSupportedContent .nav-item .nav-link {
+        font-size: 28px;
+    }
+    #navbarSupportedContent .form-inline {
+        padding-left: 26px;
+        padding-right: 26px;
+    }
+
+    .tabs-edit-profile {
+        display: none;
+    }
+    .tabs-edit-profile-mobile {
+        display: flex;
+        justify-content: space-between;
+    }
+}
