--- a/resources/assets/css/candidate-style.css
+++ b/resources/assets/css/candidate-style.css
@@ -1037,11 +1037,7 @@ label.error {
 }
 
 .div-image-carousel {
-   background: linear-gradient(
-      181.6deg,
-      rgba(0, 0, 0, 0) 0%,
-      rgba(0, 0, 0, 0.8) 76.74%
-   );
+   background: linear-gradient(181.6deg,rgba(0,0,0,0) 0,rgb(76 74 74 / 80%) 76.74%);
 }
 
 .badge-carousel {
